<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="hello">Choose one of the features below.</string>

    <string name="app_name">ParisRéseauProfessionnel</string>
    <string name="description_logo">Trace your friends evry where</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_profile">Profile</string>
    <string name="description_request">Request</string>
    <string name="description_friends">Friends</string>
    <string name="description_favoris">Favorite places</string>
    <string name="description_you">Your location</string>
    <string name="description_setting">Setting</string>

    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="description_delete">delete</string>
    <string name="description_retourne">retourne</string>
    <string name="title_profile">Profil</string>
    <string name="title_request">Rechercher une annonce</string>
    <string name="title_friends">Friends</string>
    <string name="title_annonce">Créer une annonce</string>
    <string name="title_you">Modifier/supprimer ses annonces</string>
    <string name="title_setting">Setting</string>

    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>

    <string name="about_intro">This app is a social network that allow you to track your friends whit there authorization evry where in the world</string>
    <string name="search_intro">Content for the Search page goes here.</string>
    <string name="Confirmer">Confirmer</string>
    <string name="Homme">Homme</string>
	<string name="Femme">Femme</string>
    <string name="Nom">Nom</string>
    <string name="Prenom">Prénom</string>
    <string name="Email">Email</string>
   	<string name="Telephone">Téléphone</string>
   	<string name="Ville">Ville</string>
	<string name="Professionnel">Professionnel</string>
	<string name="Utilisateur">Utilisateur</string>
    <string name="Sinscrire">S\'inscrire</string>
    <string name="ImageDescription">Une image</string>
    <string name="Inscription">Inscription</string>
    <string name="AjouterAnnonce">Ajouter Annonce</string>
	<string name="select_metier">Metiers</string>
	<string name="role_user">Role</string>
	<string name="Publier">Publier</string>
	<string name="Modifier">Modifier</string>

</resources>
