<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:onClick="onClickAbout"
            android:src="@drawable/title_about" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

      <!--  <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12.03" >
    </ListView>-->
    
   <TextView 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content" 
			    android:text="Titre de l'annonce"
			    android:textStyle="bold"
			    android:textColor="#FF0000"
			    android:gravity="center"
			  />

			  <EditText
			      android:id="@+id/titre_Annonce"
			      android:layout_width="fill_parent"
			      android:layout_height="wrap_content"
			      android:hint="Titre_Annonce"
			      android:inputType="numberDecimal" />
			  <TextView 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content" 
			    android:text="Texte de l'annonce"
			    android:textStyle="bold"
			    android:textColor="#FF0000"
			    android:gravity="center"
			  />
			  
			  <EditText
    	    android:id="@+id/texteAnnonce"
    	    android:layout_width="fill_parent"
    	    android:layout_height="141dp"
    	    android:ems="10"
    	    android:inputType="textMultiLine" >

    	    <requestFocus />
    	</EditText>
			  
		<TextView 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content" 
			    android:text="Métier"
			    android:textStyle="bold"
			    android:textColor="#FF0000"
			    android:gravity="center"
			  />
			  
		<Spinner
        android:id="@+id/spinnerMetier"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_metier" />	  
		
		<!--  <TextView 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content" 
			    android:text="vous jouer le rôle d’un professionnel ?"
			    android:textStyle="bold"
			    android:textColor="#FF0000"
			    android:gravity="center"
			  />
			  
		<Spinner
        android:id="@+id/spinnerRoleUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/role_user" >
    	
		    <item>Oui</item>
        	<item>Nom</item>
		    
		</Spinner>-->
		
		<RadioGroup
		    android:id="@+id/group"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:checkedButton="@+id/radio2"
		    android:orientation="horizontal"
		  >
		    <RadioButton 
		      android:id="@+id/radioProfessionnel"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:text="Professionnel"
		    />
		    <RadioButton 
		      android:id="@+id/radioNomProfessionnem"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:text="Utilisateur"
		    />
  		</RadioGroup>
  		
		<Button
    		    android:id="@+id/PublierButton"
    		    android:layout_width="fill_parent"
    		    android:layout_height="wrap_content"
    		    android:layout_gravity="center_horizontal"
    		    android:text="@string/Publier" />

</LinearLayout>
