<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView
            style="@style/TitleBarText"
            android:layout_marginLeft="70dp"
            android:text="Profile" />
            />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:onClick="onClickAbout"
            android:src="@drawable/title_about" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                style="@style/TitleBarSeparator"
                android:layout_width="wrap_content"
                android:contentDescription="@string/Inscription" />

            <TextView style="@style/TitleBarText" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="Votre profil"
                        android:textColor="#ff355689"
                        android:textSize="13pt" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="50dp"
                        android:padding="0dp"
                        android:text="@string/Nom" />

                    <TextView
                        android:id="@+id/profileNom"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="0dp"
                        android:padding="0dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="20dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="50dp"
                        android:padding="0dp"
                        android:text="@string/Prenom" />

                    <TextView
                        android:id="@+id/profilePrenom"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="0dp"
                        android:padding="0dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="20dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="50dp"
                        android:padding="0dp"
                        android:text="@string/Email" />

                    <TextView
                        android:id="@+id/profileEmail"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="0dp"
                        android:padding="0dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="13dp"
                            android:padding="5dp"
                            android:text="Arrondissement" />
                    </LinearLayout>

                    <Spinner
                        android:id="@+id/profileArrondissement"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="50dp"
                        android:padding="0dp"
                        android:text="@string/Telephone" />

                    <EditText
                        android:id="@+id/profileTelephone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="0"
                        android:inputType="phone"
                        android:padding="0dp" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="20dp"
                            android:padding="5dp"
                            android:text="Etes vous un professionnel ?" />
                    </LinearLayout>

                    <Spinner
                        android:id="@+id/profilegroupIsProf"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </TableRow>
            </LinearLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="74.50"
                android:shrinkColumns="1"
                android:stretchColumns="1" >

                <View
                    android:layout_height="2dip"
                    android:background="#FF909090" />
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <!-- xmlns:android="http://schemas.android.com/apk/res/android" -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Button_EditerProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Sauvegarder" />

        <Button
            android:id="@+id/Button_AnnulerEditerProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Annuler" />
    </LinearLayout>

</LinearLayout>